Getting docs up to date
